# Laboratorio1_VisionComputacional

./: LABORATORIO_1_VISION_COMPUTACIONAL.ipynb  pyproject.toml
