[project]
name = "laboratorio1-vision-computacional"
version = "0.1.0"
description = "Entorno uv para el cuaderno del laboratorio de vision computacional"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv]
package = false

